--- a/carExample/package.json
+++ b/carExample/package.json
@@ -1,9 +1,9 @@
 {
   "name": "car",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "dependencies": {
+    "bindings": "^1.3.0",
     "cors": "^2.8.4",
     "node-gyp": "^3.6.2",
     "socket.io": "^2.0.4",
@@ -14,5 +14,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
