--- a/DatabaseExample/package.json
+++ b/DatabaseExample/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-error-handler": "^1.1.0",
