--- a/DatabaseExample/package.json
+++ b/DatabaseExample/package.json
@@ -13,9 +13,10 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
     "http": "0.0.0",
-    "mongodb": "^3.0.4",
-    "mongoose": "^5.0.10",
+    "mongodb": "^3.0.7",
+    "mongoose": "^5.0.17",
     "multer": "^1.3.0",
+    "mysql": "github:mysqljs/mysql",
     "path": "^0.12.7",
     "serve-static": "^1.13.2",
     "server-static": "^2.0.5"
